--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 # Jet Brains 全家桶的配置
 .idea/
-cmake-build-debug/
 CMakeLists.txt
+cmake-build-debug/
 
 # Visual Studio Code 的配置
 .vscode/
 
 # windows 的可执行文件
 *.exe
+
+# linux 的重定向文件
+*.o
 
 # linux 的可执行文件
 *.elf
